# variant

./: CMakeLists.txt  Makefile  main_variant.cpp  main_variant_msgpack.cpp  msgpack-alt.hpp  variant.hpp
